--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "mindpyramid",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "platforms": [
+    "ios",
+    "android",
+    "web"
+  ],
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,11 +15,15 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "^49.0.22",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
