--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^49.0.22",
+    "expo-linear-gradient": "^12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-masked-view": "^0.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
