--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "dayjs": "^1.11.10",
     "expo": "^49.0.22",
     "expo-linear-gradient": "^12.7.1",
     "expo-status-bar": "~1.11.1",
