--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "dayjs": "^1.11.10",
-    "expo": "^49.0.22",
-    "expo-linear-gradient": "^12.7.1",
+    "expo": "^50.0.0",
+    "expo-auth-session": "^5.4.0",
+    "expo-crypto": "~12.8.0",
+    "expo-linear-gradient": "~12.7.1",
+    "expo-random": "~13.6.0",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-calendars": "^1.1303.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-view": "^0.2.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
