--- a/package.json
+++ b/package.json
@@ -8,35 +8,39 @@
   ],
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+   
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "dayjs": "^1.11.10",
-    "expo": "^50.0.0",
-    "expo-auth-session": "^5.4.0",
-    "expo-crypto": "~12.8.0",
+    "dayjs": "^1.11.10",   
     "expo-linear-gradient": "~12.7.1",
-    "expo-random": "~13.6.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.2",
+
+    "expo": "~48.0.11",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.73.4",
     "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-masked-view": "^0.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native": "0.71.6",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
+    "expo-web-browser": "~12.1.1",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
