--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mindPyramid",
-    "slug": "mindPyramid",
+    "name": "mindpyramid",
+    "slug": "mindpyramid",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,10 +16,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.peace.mindPyramid"
+      "bundleIdentifier": "com.peace.mindpyramid"
       },
     "android": {
-      "package": "com.peace.mindPyramid",
+      "package": "com.peace.mindpyramid",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
