--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-   
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "dayjs": "^1.11.10",   
+    "dayjs": "^1.11.10",
     "expo-linear-gradient": "~12.7.1",
-
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -40,7 +38,8 @@
     "react-native-web": "~0.18.10",
     "react-dom": "18.2.0",
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
