--- a/package.json
+++ b/package.json
@@ -13,33 +13,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
-    "expo-linear-gradient": "~12.7.1",
     "expo": "~48.0.11",
+    "expo-auth-session": "~4.0.3",
+    "expo-av": "~13.4.1",
+    "expo-crypto": "~12.2.1",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-masked-view": "^0.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native": "0.71.6",
-    "expo-auth-session": "~4.0.3",
-    "expo-crypto": "~12.2.1",
-    "expo-web-browser": "~12.1.1",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-picker/picker": "2.4.8"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
