--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.18.10",
     "react-native-webview": "13.2.2",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
