--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.10",
     "expo": "^49.0.23",
     "expo-auth-session": "~4.0.3",
+    "expo-av": "^13.10.5",
     "expo-crypto": "~12.2.1",
     "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.4.4",
