--- a/ios/mindPyramid/Info.plist
+++ b/ios/mindPyramid/Info.plist
@@ -22,6 +22,10 @@
     <string>1.0.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Used to play audio.</string>
+    <key>NSAudioAlwaysUsageDescription</key>
+    <string>Used to play audio.</string>
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
