--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,10 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "distribution": "store", 
+      "releaseChannel": "default" 
+    }
   },
   "submit": {
     "production": {}
