--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "expo-crypto": "~12.2.1",
     "expo-file-system": "~15.4.5",
     "expo-linear-gradient": "~12.7.1",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
-    "react-native-calendars": "^1.1303.0",
+    "react-native-calendars": "^1.1304.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-masked-view": "^0.2.0",
     "react-native-paper": "^5.12.3",
